--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,5 +1,6 @@
 FROM grafana/grafana:6.1.2
 
 ADD ./config.ini /etc/grafana/config.ini
-ADD ./provisioning /etc/grafana/provisioning
+ADD ./provisioning/dashboards /etc/grafana/provisioning/dashboards
+ADD ./provisioning/datasources/prometheus.yaml /etc/grafana/provisioning/datasources/prometheus.yaml
 ADD ./dashboards /var/lib/grafana/dashboards
