--- a/redisedge/Dockerfile
+++ b/redisedge/Dockerfile
@@ -1,12 +1,18 @@
 FROM redislabs/redisedge:latest
-# TODO: freeze version
 
-ENV DEPS "libglib2.0-0 libsm6 libxrender1 libxext6 python-pip"
+ENV DEPS "python python-pip libglib2.0-0 libsm6 libxrender1 libxext6"
 RUN set -ex; \
     apt-get update; \
     apt-get install -y --no-install-recommends $DEPS;
 
+RUN set -ex; \
+    pip install pipenv;
+
 ADD ./requirements.txt /tmp/requirements.txt
 RUN set -ex; \
-    pip install -t /usr/local/lib/python2.7/site-packages -r /tmp/requirements.txt;
-# TODO: install to virtual env once https://github.com/RedisLabsModules/RedisGears/pull/85 is merged
+    cd /opt/redislabs/lib/modules/python3; \
+    pipenv run pip install -r /tmp/requirements.txt;
+
+ADD ./redisedge.conf /usr/local/etc/redisedge.conf
+
+CMD ["/usr/local/etc/redisedge.conf"]
