lfs track model

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pb filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+app/models/yolov3-spp-traced.pt filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
