--- a/redismod/Dockerfile
+++ b/redismod/Dockerfile
@@ -1,23 +1,8 @@
-FROM redisai/redisai:edge as redisai
-FROM redislabs/redistimeseries:edge as redistimeseries
-FROM redislabs/redisgears:edge
-
-ENV LD_LIBRARY_PATH /usr/lib/redis/modules
-
-COPY --from=redisai ${LD_LIBRARY_PATH}/redisai.so ${LD_LIBRARY_PATH}/
-COPY --from=redisai ${LD_LIBRARY_PATH}/backends ${LD_LIBRARY_PATH}/backends
-COPY --from=redistimeseries ${LD_LIBRARY_PATH}/*.so ${LD_LIBRARY_PATH}/
-
-# ENV PYTHONPATH /usr/lib/redis/modules/deps/cpython/Lib
-ENTRYPOINT ["redis-server"]
-CMD ["--loadmodule", "/usr/lib/redis/modules/redisai.so", \
-    "--loadmodule", "/usr/lib/redis/modules/redistimeseries.so", \
-    "--loadmodule", "/var/opt/redislabs/lib/modules/redisgears.so", \
-    "PythonHomeDir", "/opt/redislabs/lib/modules/python3"]
+FROM redislabs/redismod:edge
+FROM redislabs/redismod:edge
 
 ENV DEPS "python python3-pip python3-setuptools libglib2.0-0 libsm6 libxrender1 libxext6 libgomp1"
 WORKDIR /data
 RUN set -ex; \
     apt-get update; \
-    apt-get install -y --no-install-recommends $DEPS; \
-    chmod +x /usr/lib/redis/modules/redisai.so
+    apt-get install -y --no-install-recommends $DEPS;
