--- a/redismod/Dockerfile-gpu
+++ b/redismod/Dockerfile-gpu
@@ -1,19 +1,17 @@
-FROM redisai/redisai:edge-gpu as redisai
-FROM redislabs/redistimeseries:edge as redistimeseries
-FROM redislabs/redisgears:edge
+FROM redislabs/redistimeseries:edge as timeseries
+FROM redislabs/redisgears:edge as gears
+FROM redisai/redisai:edge-gpu as ai
 
 ENV LD_LIBRARY_PATH /usr/lib/redis/modules
 
-COPY --from=redisai ${LD_LIBRARY_PATH}/redisai.so ${LD_LIBRARY_PATH}/
-COPY --from=redisai ${LD_LIBRARY_PATH}/backends ${LD_LIBRARY_PATH}/backends
-COPY --from=redistimeseries ${LD_LIBRARY_PATH}/*.so ${LD_LIBRARY_PATH}/
+COPY --from=gears /var/opt/redislabs/* /var/opt/redislabs/
+COPY --from=timeseries ${LD_LIBRARY_PATH}/*.so ${LD_LIBRARY_PATH}/
 
 # ENV PYTHONPATH /usr/lib/redis/modules/deps/cpython/Lib
 ENTRYPOINT ["redis-server"]
 CMD ["--loadmodule", "/usr/lib/redis/modules/redisai.so", \
     "--loadmodule", "/usr/lib/redis/modules/redistimeseries.so", \
-    "--loadmodule", "/var/opt/redislabs/lib/modules/redisgears.so", \
-    "PythonHomeDir", "/opt/redislabs/lib/modules/python3"]
+    "--loadmodule", "/var/opt/redislabs/lib/modules/redisgears.so"]
 
 ENV DEPS "python python3-pip python3-setuptools libglib2.0-0 libsm6 libxrender1 libxext6 libgomp1"
 WORKDIR /data
