--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: System Setup
           command: |
             sudo apt-get -qq update -y
-            sudo apt-get -q install -y curl ca-certificates wget make
+            sudo apt-get -q install -y curl ca-certificates wget make python3.6
       - run:
           name: Docker up
           command: |
@@ -19,10 +19,10 @@ jobs:
       - run:
           name: Run capture
           command: |
-            virtualenv venv
+            virtualenv -p python3.6 venv
             source venv/bin/activate
-            pip install -r app/requirements.txt
-            python capture.py
+            pip3 install -r app/requirements.txt
+            python3 app/capture.py
 
 workflows:
   version: 2
