--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             sudo apt-get -q install -y software-properties-common curl ca-certificates wget make 
             sudo add-apt-repository ppa:deadsnakes/ppa
             sudo apt-get -qq update -y
-            sudo apt install python3.6
+            sudo apt-get -q install -y python3.6
             python ––version
       - run:
           name: Docker up
