--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           command: |
             sudo apt-get -qq update -y
             sudo apt-get -q install -y software-properties-common curl ca-certificates wget make 
-            sudo add-apt-repository ppa:deadsnakes/ppa
+            sudo add-apt-repository -y ppa:deadsnakes/ppa
             sudo apt-get -qq update -y
             sudo apt-get -q install -y python3.6
             python ––version
