--- a/redisedge/redisedge.conf
+++ b/redisedge/redisedge.conf
@@ -2,6 +2,7 @@
 
 loadmodule /usr/lib/redis/modules/redisai.so
 loadmodule /usr/lib/redis/modules/redistimeseries.so
-loadmodule /opt/redislabs/lib/modules/redisgears.so PythonHomeDir /opt/redislabs/lib/modules/python3
+#loadmodule /opt/redislabs/lib/modules/redisgears.so PythonHomeDir /opt/redislabs/lib/modules/python3
+loadmodule /var/opt/redislabs/lib/modules/redisgears.so PythonHomeDir /var/opt/redislabs/modules/rg/python3 
 
 dir /data
