--- a/grafana/config.ini
+++ b/grafana/config.ini
@@ -3,3 +3,8 @@ provisioning = /etc/grafana/provisioning
 
 [server]
 enable_gzip = true
+
+[auth.anonymous]
+enabled = true
+org_name = CountVonCount
+
