--- a/app/Dockerfile.jetson
+++ b/app/Dockerfile.jetson
@@ -1,5 +1,4 @@
-# FROM python:3.7.3
-FROM redisfab/redisedge-pylibs:0.4.0-x64-bionic
+FROM redisfab/redisedge-pylibs:0.4.0-jetson-arm64v8-bionic
 
 WORKDIR /app
 ADD . /app
