--- a/Makefile.jetson
+++ b/Makefile.jetson
@@ -26,7 +26,7 @@ logs:
 
 build:
 	@docker-compose -f $(SPEC) build
-	@docker-compose -f $(SPEC) build redisedge
+	@docker-compose -f docker-compose.jetson.yaml build redisedge
 
 clean:
 	@docker rmi $(foreach x,$(IMAGES),$(DEMO_STEM)_$(x):latest)
