--- a/app/Dockerfile.jetson
+++ b/app/Dockerfile.jetson
@@ -3,6 +3,6 @@ FROM redisfab/redisedge-pylibs:0.4.0-jetson-arm64v8-bionic
 WORKDIR /app
 ADD . /app
 
-RUN pip install -r requirements.txt
+RUN python3 -m pip install -r requirements.txt
 
 ENTRYPOINT [ "python3" ]
