new RedisAI API

--- a/redismod/Dockerfile
+++ b/redismod/Dockerfile
@@ -1,4 +1,4 @@
-FROM redislabs/redismod:latest
+FROM redislabs/redismod:edge
 
 ENV DEPS "python python3-pip python3-setuptools libglib2.0-0 libsm6 libxrender1 libxext6 libgomp1"
 RUN set -ex; \
